# python-c-interop

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: tiny.py
generator/: CodeWriter.py  PythonModuleGenerator.py  attributes.py  c_header_generator.py  c_python_conversion_generator.py  c_python_module_generator.py  c_to_string_generator.py  codewriter.py  ctypes.py  parseheader.py  pyi_generator.py  python_model_generator.py  python_module_generator.py  style.py  template.py
model/: model.py
src/c_interop/generator/: attributes.py  c_header_generator.py  c_python_conversion_generator.py  c_to_string_generator.py  codewriter.py  ctypes.py  parseheader.py  python_model_generator.py  template.py
src/c_interop/model/: model.py
