[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c-interop"
version = "0.1.0"
description = "Generates C and Python structs and enums plus conversion code from a definition povided by the user."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [,
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/sbohmann/python-c-interop"
Repository = "https://github.com/sbohmann/python-c-interop.git"

[tool.setuptools]
package-dir = {"" = "src"}
